fix(header): clarity icons with text misaligned in ie11
closes #3519

--- a/src/clr-angular/layout/nav/_header.clarity.scss
+++ b/src/clr-angular/layout/nav/_header.clarity.scss
@@ -138,8 +138,8 @@
       &.nav-icon-text {
         clr-icon {
           position: relative;
-          top: initial;
-          left: initial;
+          top: auto;
+          left: auto;
           transform: none;
           margin-left: 1rem;
         }
